<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name:</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="non_smoking_area">Non-Smoking Area</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_group_size">Enter group size</string>
    <string name="group_size">Group Size:</string>
    <string name="enter_name">Enter name</string>
    <string name="select_a_date">Select a Date:</string>
    <string name="select_a_time">Select a Time:</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="preferences">Preferences:</string>
    <string name="reserve">Reserve</string>
    <string name="reset">Reset</string>
</resources>